; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_heap.c_AddNewRelationType.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_heap.c_AddNewRelationType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TYPTYPE_COMPOSITE = common dso_local global i32 0, align 4
@TYPCATEGORY_COMPOSITE = common dso_local global i32 0, align 4
@DEFAULT_TYPDELIM = common dso_local global i32 0, align 4
@F_RECORD_IN = common dso_local global i32 0, align 4
@F_RECORD_OUT = common dso_local global i32 0, align 4
@F_RECORD_RECV = common dso_local global i32 0, align 4
@F_RECORD_SEND = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i8, i32, i32, i32)* @AddNewRelationType to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AddNewRelationType(i8* %0, i32 %1, i32 %2, i8 signext %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8, align 1
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i8 %3, i8* %11, align 1
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %15 = load i32, i32* %13, align 4
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i8, i8* %11, align 1
  %20 = load i32, i32* %12, align 4
  %21 = load i32, i32* @TYPTYPE_COMPOSITE, align 4
  %22 = load i32, i32* @TYPCATEGORY_COMPOSITE, align 4
  %23 = load i32, i32* @DEFAULT_TYPDELIM, align 4
  %24 = load i32, i32* @F_RECORD_IN, align 4
  %25 = load i32, i32* @F_RECORD_OUT, align 4
  %26 = load i32, i32* @F_RECORD_RECV, align 4
  %27 = load i32, i32* @F_RECORD_SEND, align 4
  %28 = load i32, i32* @InvalidOid, align 4
  %29 = load i32, i32* @InvalidOid, align 4
  %30 = load i32, i32* @InvalidOid, align 4
  %31 = load i32, i32* @InvalidOid, align 4
  %32 = load i32, i32* %14, align 4
  %33 = load i32, i32* @InvalidOid, align 4
  %34 = load i32, i32* @InvalidOid, align 4
  %35 = call i32 @TypeCreate(i32 %15, i8* %16, i32 %17, i32 %18, i8 signext %19, i32 %20, i32 -1, i32 %21, i32 %22, i32 0, i32 %23, i32 %24, i32 %25, i32 %26, i32 %27, i32 %28, i32 %29, i32 %30, i32 %31, i32 0, i32 %32, i32 %33, i32* null, i32* null, i32 0, i8 signext 100, i8 signext 120, i32 -1, i32 0, i32 0, i32 %34)
  ret i32 %35
}

declare dso_local i32 @TypeCreate(i32, i8*, i32, i32, i8 signext, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32*, i32, i8 signext, i8 signext, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
